--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4",
+    "react-youtube": "^7.6.0",
     "whatwg-fetch": "^2.0.4"
   },
   "scripts": {
